samples/_failures_safe/1761696396_26bb08_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_531fa301.c: In function ‘main’:
./samples/SAFE/__tmp_531fa301.c:151:33: error: expected ‘;’ at end of input
  151 |                     print_matrix
      |                                 ^
      |                                 ;
./samples/SAFE/__tmp_531fa301.c:151:21: error: expected declaration or statement at end of input
  151 |                     print_matrix
      |                     ^~~~~~~~~~~~
./samples/SAFE/__tmp_531fa301.c:151:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_531fa301.c:151:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_531fa301.c:151:21: error: expected declaration or statement at end of input
